183089 – [Curl] Bug fix on suspend/resume behavior.

https://bugs.webkit.org/show_bug.cgi?id=183089